# ISBN_query

./: .gitignore  App_Logger.py  App_core.py  App_gui.py  App_log.txt  App_search.py  App_utils.py  ISBN_excel_dedup.py  README.md  __init__.py  db.py  main.py  menu.py  pyproject.toml  query.py  requirements.txt
.github/workflows/: build-windows.yml
FileMgr/: __init__.py  csv_read.py  del_files.py  engage.py  read_xl.py  scan_xl.py  wash_xl.py
