[project]
name = "isbn-query"
version = "0.1.0"
description = "ISBN local deduplication and checking system with UI powered by NiceGUI"
readme = "README.md"
requires-python = ">=3.11"

# Runtime dependencies
dependencies = [
  "pandas>=2.1.0,<3",
  "openpyxl>=3.1.2",
  "pandas-calamine>=0.7.0",
  "nicegui>=1.19.0",
  "fastapi>=0.95.2",
  "uvicorn>=0.22.0",
  "xlrd>=2.0.1",
]

[project.optional-dependencies]
# Dev and build-time extras
dev = [
  "pyinstaller>=5.10.0",
  "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
